--- a/404.html
+++ b/404.html
@@ -6,8 +6,7 @@ permalink: 404.html
 
 <div class="page">
   <h1 class="page-title">404: Page not found</h1>
-
-  <iframe width="560" height="315" src="https://www.youtube.com/embed/SIaFtAKnqBU?autoplay=1&start=3" frameborder="0" allowfullscreen></iframe>
+![Lost_Beach]({{ site.github.url }}/assets/img/john-travolta-meme-beach-7atku372kupvzscx-3905529669.gif)
 
   <h1>Ahhhhh!</h1>
 
